--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      </head>
 <Body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (coming soon!)</a></p>
+    <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
 
 </Body>
 </html>    
