--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
     <head> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA compatible" Content="ie=edge">
+        <meta http-equiv="X-UA compatible" content="ie=edge">
         <Title>Excursion</Title>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
      </head>
 <Body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
-    <video Autoplay loop> 
-        <Source src="resources/videos/excursion.mp4" type="video/mp4">
+    <video autoplay loop> 
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
-
+<h2 class="header--secondary">Your personal travel guide</h2>
+<h4 class="header--subheader">Excursion remembers places you like, and recommends new points of interest around</h4>
 </Body>
 </html>    
