--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h4 class="header--subheader">Excursion remembers places you like, and recommends new points of interest around</h4>
 <p><img src="resources/images/camp.jpg"></p>
 <p><img src="resources/images/phone.png"></p>
-
-
+<h4 class="header--subheader">Coming soon for iphone and Android</h4>
+<p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
 </Body>
 </html>    
