--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 <p><img src="resources/images/phone.png"></p>
 <h4 class="header--subheader">Coming soon for iphone and Android</h4>
 <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
+<p class="footer--copyright"> &COPY;Excursion</p>
+
 </Body>
 </html>    
